kubernetes/apps/games/palworld-server/app/external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: palworld-server
  annotations:
    tailscale.com/tailnet-fqdn: pal-world-server.tail7ad738.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
    - name: dashboard
      port: 3000
      protocol: TCP
    - name: portainer
      port: 9000
      protocol: TCP
