kubernetes/apps/games/palworld-server/app/portainer-httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: palworld-portainer
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      dns:
        query-name: portainer.unscfleet.com
        query-type: A
      url: 1.1.1.1
      conditions:
        - len([BODY]) == 0
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - portainer.unscfleet.com
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: palworld-portainer
